# expense-tracker

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
client/: .eslintrc  .prettierignore  Dockerfile.prod  package-lock.json  package.json
client/.husky/: pre-commit
client/src/: App.jsx  index.css  main.jsx  main.tsx
client/src/components/: Alert.jsx  BasicDateTimePicker.jsx  CategorySelect.jsx  DateTimePicker.jsx  InputWrapper.jsx  Select.jsx  TransactionTable.jsx
client/src/lib/: dataFetch.js  theme.js
client/src/routes/: root.jsx  transactions.jsx
client/src/styles/: custom.css  radix.css
server/: .env  .eslintrc  .prettierignore  Dockerfile.prod  database.types.ts  environment.d.ts  jest.config.js  main.py  package-lock.json  package.json  tsconfig.json  validators.py
server/.husky/: pre-commit
server/account/: functions.py  models.py
server/account/migrations/: 0001_initial.py  0002_alter_account_latest_balance_and_more.py
server/api/: serializers.py  urls.py  views.py
server/config/: settings.py  urls.py
server/old/: db.py  main.py
server/src/: app.ts  data-source.ts  routes.ts
server/src/entity/: Account.ts  Category.ts  CreditCardManager.ts  Label.ts  RecurringTransactionConfig.ts  Transaction.ts
server/src/features/: test.ts
server/src/lib/: supabase.ts
server/src/routes/: account.ts  accountType.ts  category.ts  categoryGroup.ts  index.ts  label.ts  transaction.ts
server/src/utils/: response.ts
server/transaction/: apps.py  models.py
server/transaction/migrations/: 0001_initial.py  (+2 more)
(+123 files in other folders)
