[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = "Track your expenses, generate insights that guide you towards a positive financial well being"
authors = ["Akash N P <akashnp1998@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "expense_tracker"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
supabase = "^1.0.2"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
