[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = "Track your expenses, generate insights that guide you towards a positive financial well being"
authors = ["Akash N P <akashnp1998@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "expense_tracker"}]

[tool.poetry.dependencies]
python = "^3.8"
python-decouple = "^3.8"
django = "^4.2"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
